@@ -15,10 +15,6 @@
  */
 package com.google.testing.compile;
 
-import com.google.common.base.Function;
-import com.google.common.collect.FluentIterable;
-import com.google.common.collect.ImmutableSet;
-import com.google.common.collect.Sets;
 import com.sun.source.tree.ClassTree;
 import com.sun.source.tree.CompilationUnitTree;
 import com.sun.source.tree.ExpressionStatementTree;
@@ -27,9 +23,9 @@ import com.sun.source.tree.MemberSelectTree;
 import com.sun.source.tree.Tree;
 import com.sun.source.util.TreeScanner;
 
+import java.util.LinkedHashSet;
 import java.util.Set;
-
-import static com.google.common.base.MoreObjects.firstNonNull;
+import java.util.stream.Collectors;
 
 /**
  * Provides information about the set of types that are declared by a {@code CompilationUnitTree}.
@@ -46,8 +42,8 @@ final class TypeEnumerator {
      * Returns a set of strings containing the fully qualified names of all
      * the types that are declared by the given CompilationUnitTree
      */
-    static ImmutableSet<String> getTopLevelTypes(CompilationUnitTree t) {
-        return ImmutableSet.copyOf(nameVisitor.scan(t, null));
+    static Set<String> getTopLevelTypes(CompilationUnitTree t) {
+        return new LinkedHashSet<>(nameVisitor.scan(t, null));
     }
 
     /** A {@link TreeScanner} for determining type declarations */
@@ -55,17 +51,18 @@ final class TypeEnumerator {
     static final class TypeScanner extends TreeScanner<Set<String>, Void> {
         @Override
         public Set<String> scan(Tree node, Void v) {
-            return firstNonNull(super.scan(node, v), ImmutableSet.<String>of());
+            Set<String> result = super.scan(node, v);
+            return result != null ? result : Set.of();
         }
 
         @Override
         public Set<String> reduce(Set<String> r1, Set<String> r2) {
-            return Sets.union(r1, r2);
+            return Util.union(r1, r2);
         }
 
         @Override
         public Set<String> visitClass(ClassTree reference, Void v) {
-            return ImmutableSet.of(reference.getSimpleName().toString());
+            return Set.of(reference.getSimpleName().toString());
         }
 
         @Override
@@ -76,7 +73,7 @@ final class TypeEnumerator {
 
         @Override
         public Set<String> visitIdentifier(IdentifierTree reference, Void v) {
-            return ImmutableSet.of(reference.getName().toString());
+            return Set.of(reference.getName().toString());
         }
 
         @Override
@@ -87,27 +84,25 @@ final class TypeEnumerator {
                         + "identifier in the expression set. Found " + expressionSet);
             }
             String expressionStr = expressionSet.iterator().next();
-            return ImmutableSet.of(String.format("%s.%s", expressionStr, reference.getIdentifier()));
+            return Set.of(String.format("%s.%s", expressionStr, reference.getIdentifier()));
         }
 
         @Override
         public Set<String> visitCompilationUnit(CompilationUnitTree reference, Void v) {
             Set<String> packageSet = reference.getPackageName() == null ?
-                    ImmutableSet.of("") : scan(reference.getPackageName(), v);
+                    Set.of("") : scan(reference.getPackageName(), v);
             if (packageSet.size() != 1) {
                 throw new AssertionError("Internal error in NameFinder. Expected to find at most one " +
                         "package identifier. Found " + packageSet);
             }
-            final String packageName = packageSet.isEmpty() ? "" : packageSet.iterator().next();
-            Set<String> typeDeclSet = firstNonNull(scan(reference.getTypeDecls(), v), ImmutableSet.of());
-            return FluentIterable.from(typeDeclSet)
-                    .transform(new Function<String, String>() {
-                        @Override
-                        public String apply(String typeName) {
-                            return packageName.isEmpty() ? typeName :
-                                    String.format("%s.%s", packageName, typeName);
-                        }
-                    }).toSet();
+            final String packageName = packageSet.iterator().next();
+            Set<String> typeDeclSet = scan(reference.getTypeDecls(), v);
+            if (typeDeclSet == null) {
+                return Set.of();
+            }
+            return typeDeclSet.stream()
+                    .map(typeName -> packageName.isEmpty() ? typeName :
+                            String.format("%s.%s", packageName, typeName)).collect(Collectors.toCollection(LinkedHashSet::new));
         }
     }
 }
